# higher-c

./: .ghc.environment.x86_64-linux-8.4.3  .gitignore  .travis.yml  Guardfile  LICENSE  LICENSE.md  Language.md  Main.hc  Main.hk  README  README.md  TODO.md  cabal.project  default.nix  hawk.cabal  hk.db-shm  hk.db-wal  hlint.exe.tix  language-hawk.cabal  language-higher-c.cabal  notepad.txt  out.txt  package.yaml  scratch  spec.exe.tix  stack.yaml
.hpc/: Main.mix
Core/Data/: Maybe.hk
app/: BuildInfo.hs  Compile.hs  Main.hs
core/: Core.hk
core/Core/: Meta.hk
core/Core/Control/: Applicative.hk  Functor.hk  Monad.hk  Semigroup.hk
core/Core/Data/: Array.hk  Bool.hk  Either.hk  Function.hk  Functor.hk  Maybe.hk  Ptr.hk  Ref.hk  Var.hk
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.4.1/: language-hawk-0.0.0-inplace.conf  package.cache
example/: Example.hk  Fact.hk  Fib.hk  Maybe.hk  grammar.hk  linked_list.hk  main.hk  main_old.hk
executable/: Main.hs
hcc/: Main.hs  TestModule.hs
hkc/: LICENSE.md  hkc.cabal  main.hk  package.yaml.old  simple.hk  stack.yaml.old
hkc/core/Core/Control/: Applicative.hk  Monad.hk  Monoid.hk  Semigroup.hk
hkc/core/Core/Data/: Char.hk  Complex.hk  Int.hk  String.hk
hkc/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hkc/example/: Example.hk  Fib.hk
hkc/src/: Main.hs
hkc/src/Data/: SnocList.hs
hkc/src/HKC/: Build.hs  Compile.hs  Grammar.y  Tokens.x
hkc/src/Language/Hawk/: Eval.hs  ScopeCheck.hs
hkc/src/Language/Hawk/Core/: Emit.hs
hkc/src/Language/Hawk/Lex/: Message.hs
hkc/src/Language/Hawk/LinearCheck/: Error.hs  LocalEnvironment.hs  Message.hs
hkc/src/Language/Hawk/Load/: Error.hs  Message.hs
hkc/src/Language/Hawk/ScopeCheck/: Message.hs
hkc/src/Language/Hawk/SubtermCheck/: Environment.hs  Message.hs
hkc/src/Language/Hawk/Syntax/: Foreign.hs  Literal.hs  Subterm.hs
hkc/src/Language/Hawk/Syntax/Term/: Basic.hs
hkc/src/Language/Hawk/TypeCheck/: Assumption.hs  Message.hs  Substitution.hs
hkc/test/: Main.hs
hkc/test/Language/Hawk/: CompilerSpec.hs
hkci/: Main.hs
language-hawk/: example.hk  language-hawk.cabal
language-hawk-analysis/: language-hawk-analysis.cabal
language-hawk-analysis/src/Data/List/: Sized.hs
language-hawk-analysis/src/Language/Hawk/: Rename.hs  Rename.hs.old  Typecheck.hs
language-hawk-analysis/src/Language/Hawk/Rename/: Error.hs
language-hawk-analysis/src/Language/Hawk/Syntax/: Abstract.hs  Bound.hs  Suspension.hs  Suspension.hs.old
language-hawk-analysis/src/Language/Hawk/Typecheck/: Error.hs
language-hawk-evaluate/: language-hawk-evaluate.cabal
language-hawk-evaluate/benchmark/: Main.hs
language-hawk-evaluate/executable/: Main.hs
language-hawk-evaluate/src/Language/Hawk/: Closure.hs  Eval.hs  Value.hs
language-hawk-source/: language-hawk-source.cabal
language-hawk-source/src/Language/Hawk/: Lex.x  Parse.hs
language-hawk-source/src/Language/Hawk/Lex/: Organize.hs  Token.hs
language-hawk-source/src/Language/Hawk/Parse/: Error.hs  Grammar.hs  Helpers.hs
language-hawk-source/src/Language/Hawk/Syntax/: Prim.hs  Source.hs
language-hawk-syntax/: language-hawk-syntax.cabal  out.txt
language-hawk-syntax/example/: Example.hk
language-hawk-syntax/src/Language/Hawk/: Lex.x  Parse.hs
language-hawk-syntax/src/Language/Hawk/Lex/: LFCut.hs  Organize.hs  Token.hs  TokenTree.hs
language-hawk-syntax/src/Language/Hawk/Parse/: Error.hs  Grammar.hs  Helpers.hs
language-hawk-syntax/src/Language/Hawk/Syntax/: Location.hs  Name.hs  Prim.hs  Source.hs
language-hawk-syntax/test/: Main.hs
language-hawk/example/: Example.hk
language-hawk/hkci/: Main.hs
language-hawk/src/Language/Hawk/: Lex.x  Parse.hs  Parse.y  Syntax.hs
language-hawk/src/Language/Hawk/Analysis/: Equality.hs  Infer.hs  Namecheck.hs
language-hawk/src/Language/Hawk/Lex/: Error.hs  Format.hs  Result.hs  State.hs  Token.hs  food
language-hawk/src/Language/Hawk/Parse/: Error.hs  Grammar.hs  Helpers.hs
language-hawk/src/Language/Hawk/Syntax/: Abstract.hs  Branch.hs  Builtin.hs  Concrete.hs  Datatype.hs  Definition.hs  Fixity.hs  Foreign.hs  GlobalBind.hs  Image.hs.old  Let.hs  Literal.hs  Location.hs  Pattern.hs  Prim.hs  Signature.hs  Source.hs  Subterm.hs  Term.hs
language-hawk/src/Language/Hawk/Syntax/Abstract/: Transform.hs
language-hawk/src/Language/Hawk/Syntax/Source/: Helpers.hs
language-hawk/test/: Main.hs
learn/: README.md  comments.md  introduction.md  modules.md  variables.md  whitespace_layout.md
nest/: nest.cabal
nest/src/: Main.hs
old/language-hawk-compile/: CHANGELOG.md  language-hawk-compile.cabal
old/language-hawk-compile/src/Control/Monad/Chronicle/: Extra.hs.old
old/language-hawk-compile/src/Language/Hawk/: LinearCheck.hs.old  Load.hs  TypeCheck.hs
old/language-hawk-compile/src/Language/Hawk/Compile/: Error.hs
old/language-hawk-compile/src/Language/Hawk/Lex/: Format.hs
old/language-hawk-compile/src/Language/Hawk/Load/: Result.hs
old/language-hawk-compile/src/Language/Hawk/ScopeCheck/: Error.hs
old/language-hawk-compile/src/Language/Hawk/Syntax/: Fixity.hs  Location.hs
old/language-hawk-compile/src/Language/Hawk/Syntax/Definition/: Basic.hs  Source.hs
old/language-hawk-compile/src/Language/Hawk/Syntax/Term/: Source.hs
old/language-hawk-evaluate/: language-hawk-evaluate.cabal
old/language-hawk-evaluate/executable/: Main.hs
papers/typesystem/row typing/: gaster96polymorphic.ps
prelude/: Prelude.hk
src/Data/: Bag.hs  SnocList.hs  Trie.hs
src/Hawk/: AST.hs  Build.hs  Codegen.hs  Compile.hs  Emit.hs  Grammar.y  Tokens.x
src/Language/CPS/: ClosureConv.hs  LambdaLift.hs  Syntax.hs
src/Language/Hawk/: CPS.hs  Cache.hs  Compile.hs  DepExpansion.hs  Dump.hs  Eval.hs  KindsCheck.hs  Lex.x  Load.hs  (+16 more)
test/: A.hc  B.hc  C.hc  D.hc  SpecHelper.hs
test-suite/: DocTest.hs  HLint.hs  Main.hs  Spec.hs
test/Hawk/: GrammarSpec.hs
tests/: Test.hs
tests/single/: 1.hc  2.hc
(+340 files in other folders)
