name:                hawk
version:             0.1.0.0
synopsis:            Hawk programming language
description:         Close to the metal, modern langauage
license:             BSD3
license-file:        LICENSE
author:              Gabriel Anderson
maintainer:          zettablade@gmail.com
copyright:           Copyight (C) 2015 Gabriel Anderson
category:            Compilers
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
Bug-Reports:         https://github.com/andgate/hawk/issues

source-repository head
  type:     git
  location: https://github.com/andgate/hawk

library
  default-language:     Haskell2010

  build-depends:        aeson
                        , ansi-wl-pprint
                        , array
                        , base
                        , binary
                        , bound
                        , bytestring
                        , containers
                        , convertible
                        , edit-distance
                        , filepath
                        , indents
                        , lens
                        , llvm-general         >= 3.5.0.0
                        , llvm-general-pure    >= 3.5.0
                        , mtl
                        , parsers
                        , safe
                        , syb
                        , text
                        , trifecta
                        , uniplate
                        , utf8-string

  ghc-options:          -Wall
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-unused-imports
                        -fno-warn-type-defaults
                        -fno-warn-orphans

  hs-source-dirs:       src

  exposed-modules:      Language.Hawk.Syntax.Alias
                        Language.Hawk.Syntax.Class
                        Language.Hawk.Syntax.Binding
                        Language.Hawk.Syntax.Expression
                        Language.Hawk.Syntax.Function
                        Language.Hawk.Syntax.Helpers
                        Language.Hawk.Syntax.Instance
                        Language.Hawk.Syntax.Items
                        Language.Hawk.Syntax.Literal
                        Language.Hawk.Syntax.Module
                        Language.Hawk.Syntax.ModuleName
                        Language.Hawk.Syntax.Name
                        Language.Hawk.Syntax.Record
                        Language.Hawk.Syntax.Statement
                        Language.Hawk.Syntax.Type
                        Language.Hawk.Syntax.Variable
                        
                        -- Old Syntax
                        --Language.Hawk.Syntax.AST
                        
                        
                        Language.Hawk.Compile
                        Language.Hawk.Compile.Package
                        Language.Hawk.Compile.Compiler.Type
                        Language.Hawk.Compile.Compiler.Version
              
                        Language.Hawk.Data.Bag
                        Language.Hawk.Data.Emittable
                        Language.Hawk.Data.Node
                        Language.Hawk.Data.Span
                        
                        --Language.Hawk.Parse.Parser
                        --Language.Hawk.Parse.Lexer
                        
                        Language.Hawk.Parse
                        Language.Hawk.Parse.Binding
                        Language.Hawk.Parse.Expression
                        Language.Hawk.Parse.Function
                        Language.Hawk.Parse.Helpers
                        Language.Hawk.Parse.Layout
                        Language.Hawk.Parse.Literal
                        Language.Hawk.Parse.Name
                        Language.Hawk.Parse.Statement
                        Language.Hawk.Parse.Type
                        Language.Hawk.Parse.Variable
                      
                        Language.Hawk.Report.Annotation
                        Language.Hawk.Report.Error
                        Language.Hawk.Report.Error.Helpers
                        Language.Hawk.Report.Error.Syntax
                        Language.Hawk.Report.Region
                        --Language.Hawk.Report.Render.Code
                        --Language.Hawk.Report.Render.Type
                        Language.Hawk.Report.Report
                        Language.Hawk.Report.Result
                        Language.Hawk.Report.Warning
                        
                        Language.Hawk.Target.LLVM.Codegen
                        Language.Hawk.Target.LLVM.Emit
                        
                        Language.Hawk.Validate
                        
                        Paths_hawk
                        

  --build-tools:          alex, happy
  --other-modules:        Hawk.Parser,
  --                      Hawk.Lexer

executable              hkc
  main-is:              Main.hs
  hs-source-dirs:       app
  default-language:     Haskell2010
  build-depends:        base
                        , hawk

  other-modules:        Compile,
                        BuildInfo

  ghc-options:          -Wall
                        -fwarn-tabs
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-unused-imports
                        -fno-warn-type-defaults
                        -fno-warn-orphans

test-suite spec
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  
  build-depends:        base
                        , hspec
                        , hawk
                        , containers
                        , trifecta
  
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N
  
  default-language:     Haskell2010
  
benchmark crit
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench
  main-is:              MainBenchmarkSuite.hs
  
  build-depends:        base,
                        criterion,
                        random
  
  ghc-options:          -Wall
                        -O2