name:                hawk
version:             0.1.0.0
synopsis:            Hawk programming language
description:         Close to the metal, modern langauage
license:             BSD3
license-file:        LICENSE
author:              Gabriel Anderson
maintainer:          zettablade@gmail.com
copyright:           Copyight (C) 2015 Gabriel Anderson
category:            Compilers
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
Bug-Reports:         https://github.com/andgate/hawk/issues

source-repository head
  type:     git
  location: https://github.com/andgate/hawk

library
  default-language:     Haskell2010

  build-depends:          aeson
                        , ansi-wl-pprint
                        , array
                        , base
                        , binary
                       -- , bound
                        , bytestring
                        , containers
                        , convertible
                        , Earley
                        , edit-distance
                        , either-unwrap
                        , filepath
                        , indents
                        , lens
                        , microlens             >= 0.2.0.0  && < 0.5
                        , microlens-mtl         >= 0.1.3.1  && < 0.2
                        , monad-control
                        , monad-logger
                        , mtl
                        , persistent 
                        , persistent-sqlite
                        , persistent-template
                        , pipes
                        , safe
                        , syb
                        , system-filepath       >= 0.3.1    && < 0.5
                        , system-fileio         >= 0.2.1    && < 0.4
                        , text
                        , text-format
                        , transformers
                        , uniplate
                        , utf8-string           >= 0.5
                        , yaml

  ghc-options:          -Wall
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-unused-imports
                        -fno-warn-type-defaults
                        -fno-warn-orphans
                        -ddump-splices

  hs-source-dirs:       src

  exposed-modules:      Language.Hawk.Compile
                        Language.Hawk.Compile.Monad
                        
                        -- Results depend on bag, but maybe that will change soon
                        Language.Hawk.Data.Bag
                        Language.Hawk.Data.Emittable
                        
                        Language.Hawk.Metadata
                        Language.Hawk.Metadata.Schema
                        Language.Hawk.Metadata.DepFinder
                        
                        Language.Hawk.Parse
                        Language.Hawk.Parse.Layout
                        Language.Hawk.Parse.Lexer
                        Language.Hawk.Parse.Grammar.ExprLevel
                        Language.Hawk.Parse.Grammar.TopLevel
                        Language.Hawk.Parse.Grammar.TypeLevel
                        Language.Hawk.Parse.Helpers
                      
                        Language.Hawk.Report.Error
                        Language.Hawk.Report.Error.Helpers
                        Language.Hawk.Report.Error.Syntax
                        Language.Hawk.Report.Region
                        --Language.Hawk.Report.Render.Code
                        --Language.Hawk.Report.Render.Type
                        Language.Hawk.Report.Report
                        Language.Hawk.Report.Result
                        
                        
                        
                        Language.Hawk.Syntax.ClassDefinition
                        Language.Hawk.Syntax.ClassInstance
                        Language.Hawk.Syntax.Expression
                        Language.Hawk.Syntax.ExpressionDefinition
                        Language.Hawk.Syntax.Item
                        Language.Hawk.Syntax.Literal
                        Language.Hawk.Syntax.Module
                        Language.Hawk.Syntax.Name
                        Language.Hawk.Syntax.OpInfo
                        --Language.Hawk.Syntax.Pattern
                        Language.Hawk.Syntax.QType
                        Language.Hawk.Syntax.Record
                        Language.Hawk.Syntax.TaggedUnion
                        Language.Hawk.Syntax.Type
                        Language.Hawk.Syntax.TypeDefinition
                        
                        --Language.Hawk.Target.LLVM.Codegen
                        --Language.Hawk.Target.LLVM.Emit
                        
                        Language.Hawk.Validate
                        
                        Paths_hawk
                        

  build-tools:          alex
  --other-modules:        Language.Hawk.Parse.Lexer
  
  default-extensions:           DeriveDataTypeable
                                OverloadedStrings
                        

executable              hkc
  main-is:              Main.hs
  hs-source-dirs:       app
  default-language:     Haskell2010
  build-depends:        base
                        , hawk

  other-modules:        Compile,
                        BuildInfo

  ghc-options:          -Wall
                        -fwarn-tabs
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-unused-imports
                        -fno-warn-type-defaults
                        -fno-warn-orphans

test-suite spec
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  
  build-depends:        base
                        , bytestring
                        , ansi-wl-pprint
                        , containers
                        , Earley
                        , hspec
                        , hawk
                        , text
                        , yaml
  
  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N
  
  default-language:     Haskell2010
  
  other-modules:        Hawk.GrammarSpec
                        SpecHelper
  
benchmark crit
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench
  main-is:              MainBenchmarkSuite.hs
  
  build-depends:        base,
                        criterion,
                        random
  
  ghc-options:          -Wall
                        -O2