name:           language-higher-c
version:        0.0.1
synopsis:       Higher-C Programming Language
description:    Strongly Typed Systems Programming
category:       Compilers
homepage:       https://github.com/andgate/higher-c
bug-reports:    https://github.com/andgate/higher-c/issues
maintainer:     Gabriel Anderson
license:        BSD3
build-type:     Simple
cabal-version:  >= 2.0

extra-source-files:
    src/Language/HigherC/Lex.x
    src/Language/HigherC/Parse.y


source-repository head
  type: git
  location: https://github.com/andgate/higher-c

library
  hs-source-dirs: src
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans
  build-depends:
      array
    , base <5
    , binary
    , bytestring
    , containers
    , directory
    , either
    , exceptions
    , extra
    , lens
    , ListZipper
    , llvm-hs ==7.0.1
    , llvm-hs-pure ==7.0.0
    , filepath
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , safe
    , semigroups
    , text
    , unbound-generics
    , unordered-containers
    , vector


  build-tools:
      alex ==3.2.4, happy==1.19.9

  exposed-modules:
      Data.Trie

      Language.HigherC.Analysis.Namecheck
      Language.HigherC.Analysis.Namecheck.Scope
      Language.HigherC.Analysis.TypeCheck

      Language.HigherC.Compile

      Language.HigherC.Lex
      Language.HigherC.Lex.Error
      Language.HigherC.Lex.State
      Language.HigherC.Lex.Token

      Language.HigherC.Parse
      Language.HigherC.Parse.Error

      Language.HigherC.Syntax.Abstract
      Language.HigherC.Syntax.Concrete
      Language.HigherC.Syntax.Concrete.Primitive
      Language.HigherC.Syntax.Location

      Language.HigherC.Transform.Abstraction
      Language.HigherC.Transform.Canonicalize
      Language.HigherC.Transform.Desugar
      Language.HigherC.Transform.Monomorphize
      Language.HigherC.Transform.Reassociate
      Language.HigherC.Transform.Specialize
      
      Language.LowerC.Syntax
      Language.LowerC.Syntax.Primitive
      Language.LowerC.Transform.Codegen
      
  
  other-modules:
  default-language: Haskell2010


executable hcc
  main-is: Main.hs
  ghc-options: -Wall -O2 -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans -rtsopts -threaded -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  default-language: Haskell2010
  hs-source-dirs:
      hcc
  build-depends:
      base
    , bifunctors
    , containers
    , extra
    , language-higher-c
    , lens
    , llvm-hs ==7.0.1
    , llvm-hs-pure ==7.0.0
    , hashmap
    , monad-loops
    , mtl
    , prettyprinter
    , text
    , transformers

  other-modules:
    TestModule
    Paths_language_higher_c
