name:                hkc
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Gabriel Anderson
maintainer:          ganderson@go.shoreline.edu
copyright:           Copyight (C) 2015 Gabriel Anderson
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

--source-repository     head
--  type:               git
--  location:

library
  default-language:     Haskell2010

  build-depends:        base < 5 && >= 4
                        , array >= 0.5 && < 1
                        , bytestring >= 0.10 && < 0.11
                        , containers >= 0.5 && < 0.6
                        , llvm-general >= 3.5 && < 4
                        , text >= 1 && < 2
                        , optparse-applicative == 0.12.0.0

  ghc-options:         -Wall
                       -fno-warn-unused-binds
                       -fno-warn-unused-do-bind
                       -fno-warn-unused-imports
                       -fno-warn-type-defaults

  hs-source-dirs:       src

  exposed-modules:      HKC.Compile
                        HKC.Build

  build-tools:          alex, happy
  other-modules:        HKC.Grammar,
                        HKC.Tokens

executable              hkc
  main-is:              Main.hs
  hs-source-dirs:       src
  default-language:     Haskell2010
  build-depends:        base < 5 && >= 4
                        , array >= 0.5 && < 1
                        , bytestring >= 0.10 && < 0.11
                        , containers >= 0.5 && < 0.6
                        , llvm-general >= 3.5 && < 4
                        , text >= 1 && < 2
                        , optparse-applicative == 0.12.0.0

  default-extensions:   OverloadedStrings
                        UnicodeSyntax
                        PostfixOperators
                        TupleSections
                        PackageImports
                        RecursiveDo
                        LambdaCase
                        MultiWayIf
                        TemplateHaskell

  ghc-options:          -Wall
                        -fwarn-tabs
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-unused-imports
                        -fno-warn-type-defaults

  build-tools:          alex, happy
  other-modules:        HKC.Grammar,
                        HKC.Tokens
