name:           language-hawk-analysis
version:        0.0.0
synopsis:       Hawk programming language syntax library
description:    Purely Functional Systems Language
category:       Compilers
homepage:       https://github.com/andgate/hawk
bug-reports:    https://github.com/andgate/hawk/issues
maintainer:     Gabriel Anderson
license:        MIT
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/andgate/hawk

library
  hs-source-dirs:
      src
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans
  build-depends:
      base
    , containers
    , either
    , exceptions
    , language-hawk-source
    , lens
    , mtl
    , prettyprinter
    , unordered-containers
    , text

  exposed-modules:
      Language.Hawk.Rename
      Language.Hawk.Rename.Error
      Language.Hawk.Syntax.Suspension
      Language.Hawk.Typecheck
      Language.Hawk.Typecheck.Error
  
  other-modules:
  default-language: Haskell2010