name:           language-hawk-evaluate
version:        0.0.0
synopsis:       Hawk programming language syntax library
description:    Purely Functional Systems Language
category:       Compilers
homepage:       https://github.com/andgate/hawk
bug-reports:    https://github.com/andgate/hawk/issues
maintainer:     Gabriel Anderson
license:        MIT
build-type:     Simple
cabal-version:  >= 2.0

source-repository head
  type: git
  location: https://github.com/andgate/hawk

library
  hs-source-dirs:
      src
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans
  build-depends:
      base <5
    , language-hawk-analysis
    , mtl
  exposed-modules:
      Language.Hawk.Eval
  
  other-modules:
  default-language: Haskell2010

executable hkci
  main-is: Main.hs
  hs-source-dirs:
      executable
  ghc-options: -Wall -O2 -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans -rtsopts -threaded -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  build-depends:
      base
    , bifunctors
    , extra
    , language-hawk-source
    , language-hawk-analysis
    , language-hawk-evaluate
    , lens
    , monad-loops
    , mtl
    , prettyprinter
    , text
    
  default-language: Haskell2010