name:           language-hawk-source
version:        0.0.0
synopsis:       Hawk programming language syntax library
description:    Purely Functional Systems Language
category:       Compilers
homepage:       https://github.com/andgate/hawk
bug-reports:    https://github.com/andgate/hawk/issues
maintainer:     Gabriel Anderson
license:        MIT
build-type:     Simple
cabal-version:  >= 2.0

extra-source-files:
    src/Language/Hawk/Lex.x

source-repository head
  type: git
  location: https://github.com/andgate/hawk

library
  hs-source-dirs:
      src
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans
  build-depends:
      Earley
    , array
    , aeson
    , base <5
    , binary
    , containers
    , lens
    , ListZipper
    , directory
    , filepath
    , extra
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , safe
    , text

  build-tools:
      alex ==3.2.4
  exposed-modules:
      Language.Hawk.Lex
      Language.Hawk.Lex.Error
      Language.Hawk.Lex.LFCut
      Language.Hawk.Lex.Organize
      Language.Hawk.Lex.State
      Language.Hawk.Lex.Token
      
      Language.Hawk.Parse
      Language.Hawk.Parse.Error
      Language.Hawk.Parse.Grammar
      Language.Hawk.Parse.Helpers
      
      Language.Hawk.Syntax.Location
      Language.Hawk.Syntax.Name
      Language.Hawk.Syntax.Prim
      Language.Hawk.Syntax.Source
      Language.Hawk.Syntax.Source.Helpers
  
  other-modules:
  default-language: Haskell2010