name:           language-hawk
version:        0.0.0
synopsis:       Hawk programming language syntax library
description:    Linear, Dependently Typed, Purely Functional Systems Language
category:       Compilers
homepage:       https://github.com/andgate/hawk
bug-reports:    https://github.com/andgate/hawk/issues
maintainer:     Gabriel Anderson
license:        MIT
build-type:     Simple
cabal-version:  >= 2.0

extra-source-files:
    CHANGELOG.md
    LICENSE.md
    README.md
    src/Language/Hawk/Lex.x

source-repository head
  type: git
  location: https://github.com/andgate/hawk

library
  hs-source-dirs:
      src
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-warn-name-shadowing -fno-warn-unused-binds -fno-warn-unused-matches -fno-warn-unused-do-bind -fno-warn-orphans
  build-depends:
      Earley
    , aeson
    , array
    , base <5
    , binary
    , bound
    , bytes
    , bytestring
    , containers
    , deriving-compat
    , directory
    , edit-distance
    , either
    , exceptions
    , extra
    , filepath
    , ghc-prim
    , hashable
    , lens
    , lifted-async
    , lifted-base
    , llvm-hs
    , llvm-hs-pure
    , mmorph
    , monad-control
    , monad-gen
    , monad-logger
    , mono-traversable
    , mtl
    , multimap
    , primitive
    , prettyprinter
    , prettyprinter-ansi-terminal
    , reducers
    , resourcet
    , safe
    , streaming-commons
    , text
    , these
    , time
    , transformers
    , transformers-base
    , unbound-generics
    , unordered-containers
    , utf8-string
    , vector
    , yaml
  build-tools:
      alex ==3.2.1
  exposed-modules:
      Language.Hawk.Lex
      Language.Hawk.Lex.Error
      Language.Hawk.Lex.Format
      Language.Hawk.Lex.State
      Language.Hawk.Lex.Token
      
      Language.Hawk.Parse
      Language.Hawk.Parse.Error
      Language.Hawk.Parse.Grammar
      Language.Hawk.Parse.Helpers
      
      Language.Hawk.Syntax
      Language.Hawk.Syntax.Branch
      Language.Hawk.Syntax.Class
      Language.Hawk.Syntax.Datatype
      Language.Hawk.Syntax.Definition
      Language.Hawk.Syntax.Fixity
      Language.Hawk.Syntax.Foreign
      Language.Hawk.Syntax.GlobalBind
      Language.Hawk.Syntax.Let
      Language.Hawk.Syntax.Literal
      Language.Hawk.Syntax.Location
      Language.Hawk.Syntax.Name
      Language.Hawk.Syntax.Pattern
      Language.Hawk.Syntax.Prim
      Language.Hawk.Syntax.Signature
      Language.Hawk.Syntax.Subterm
      Language.Hawk.Syntax.Telescope
      Language.Hawk.Syntax.Term
  
  other-modules:
  default-language: Haskell2010

